--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,17 @@
     "keywords": ["pando account bundle"],
     "license": ["LGPL-3.0"],
     "require": {
+        "blackboxcode/pando-person-bundle": "1.0.0"
     },
     "autoload": {
         "psr-4": {"BlackBoxCode\\Pando\\Bundle\\AccountBundle\\": ""}
     },
-    "repositories": [{
-    }],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/BlackBoxRepo/PandoPersonBundle"
+        }
+    ],
     "extra": {
         "branch-alias": {
             "dev-master": "develop"
