--- a/composer.json
+++ b/composer.json
@@ -6,25 +6,19 @@
         {
             "name": "Black Box Code",
             "email": "contact@blackboxcode.com"
+        },
+        {
+            "name": "Christopher West",
+            "email": "9ninemind@gmail.com",
+            "role": "architect"
         }
     ],
     "keywords": ["pando account bundle"],
     "license": ["LGPL-3.0"],
     "require": {
-        "blackboxcode/pando-person-bundle": "1.0.0"
+        "blackboxcode/pando-person-bundle": "dev-master"
     },
     "autoload": {
         "psr-4": {"BlackBoxCode\\Pando\\Bundle\\AccountBundle\\": ""}
-    },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/BlackBoxRepo/PandoPersonBundle"
-        }
-    ],
-    "extra": {
-        "branch-alias": {
-            "dev-master": "develop"
-        }
     }
 }
