--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "keywords": ["pando account bundle"],
     "license": ["LGPL-3.0"],
     "require": {
-        "blackboxcode/pando-person-bundle": "dev-master"
+        "blackboxcode/pando-person-bundle": "dev-master",
+        "blackboxcode/pando-note-bundle": "dev-master"
     },
     "autoload": {
         "psr-4": {"BlackBoxCode\\Pando\\Bundle\\AccountBundle\\": ""}
